--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask==2.3.0
-Flask-SQLAlchemy==3.0.0
-SQLAlchemy==2.0.0
-psycopg2-binary==2.9.0
-Werkzeug==2.3.0
-gunicorn==21.0.0
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.1.0
+Werkzeug==3.0.1
+python-dotenv==1.0.0
+gunicorn==22.0.0
+psycopg2-binary==2.9.9
+requests==2.31.0
